[package]
name = "rIC3"
version = "1.3.5"
edition = "2024"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]
repository = "https://github.com/gipsyh/rIC3"
description = "hardware model checker"
keywords = ["formal-verification", "model-checking", "IC3"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aig = { path = "./deps/aig-rs", version = "0.3.0" }
cadical = { package = "satif-cadical", path = "./deps/cadical-rs", version = "0.1.9" }
kissat = { package = "satif-kissat", path = "./deps/kissat-rs", version = "0.4.8" }
logic-form = { path = "./deps/logic-form", version = "0.3.2" }
giputils = { path = "./deps/giputils", version = "0.3.0" }
satif = { path = "./deps/satif", version = "0.2.1" }
abc-rs = { path = "./deps/abc-rs", version = "0.2.5" }
clap = { version = "4.5.16", features = ["derive"] }
rand = "0.9.0"
ctrlc = { version = "3.4.1", features = ["termination"] }
bitfield-struct = "0.10.0"
tempfile = "3.10.1"
process_control = "5.0.0"
nix = { version = "0.29.0", features = ["signal"] }
procspawn = "1.0.0"
shadow-rs = "1.0.0"

[build-dependencies]
shadow-rs = "1.0.0"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
panic = "abort"
strip = true
